--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
     <!-- Navbar Section -->
     <div class="w3-top">
         <div class="w3-row w3-padding w3-light-gray">
-            <div class="w3-col s3">
-                <a href="login.html" class="w3-button w3-block">
-                    <i class="fas fa-cut"></i> Login
-                </a>
-            </div>
+            
             <div class="w3-col s3">
                 <a href="#home" class="w3-button w3-b w3-block">Home</a>
             </div>
@@ -33,6 +29,12 @@
             </div>
             <div class="w3-col s3">
                 <a href="#price-section" class="w3-button w3-b w3-block">Prices</a>
+            </div>
+
+            <div class="w3-col s3">
+                <a href="slide.html" class="w3-button w3-block">
+                    <i class="fas fa-cut"></i> Gallery
+                </a>
             </div>
         </div>
     </div>
@@ -48,7 +50,7 @@
 
     <!-- Our Barbers Section -->
     <div class="w3-sand w3-large" id="information">
-        <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">OUR BARBERS</span></h5>
+        <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">OUR STAFF</span></h5>
         <div class="w3-row-padding w3-padding-large">
             <div class="w3-third w3-container w3-margin-bottom w3-hover-grayscale">
                 <div class="w3-container w3-center w3-black">
@@ -142,7 +144,7 @@
 
      <!-- Call to Action Button -->
      <div class="call-to-action w3-center w3-padding-top-64">
-        <a href="#hour-section" style="font-size:30px;" class="w3-white w3-text-dark w3-btn w3-border">BOOK AN
+        <a href="login.html" style="font-size:30px;" class="w3-white w3-text-dark w3-btn w3-border">BOOK AN
             APPOINTMENT</a>
     </div>
     <!-- End page content -->
