--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="index.html">
+        <form action="index.html?#hour-section">
             <label for="username">Enter your username</label>
             <input type="text" id="username" placeholder="username">
             <label for="password">Enter your password</label>
