updated links and colors

--- a/slide.html
+++ b/slide.html
@@ -7,12 +7,34 @@
     <link rel="icon" href="./images/SALON_BNB_LOGO-02.jpg">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&amp;display=swap'>
     <link rel="stylesheet" href="./css/slide.css">
+    <link rel="stylesheet" href="./css/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- Navbar Section -->
+    <div class="w3-top">
+        <div class="w3-row w3-padding w3-light-gray">
+            
+            <div class="w3-col s3">
+                <a href="index.html?#home" class="w3-button w3-b w3-block">Home</a>
+            </div>
+            <div class="w3-col s3">
+                <a href="index.html?#hour-section" class="w3-button w3-b w3-block">Opening hours</a>
+            </div>
+            <div class="w3-col s3">
+                <a href="index.html?#price-section" class="w3-button w3-b w3-block">Prices</a>
+            </div>
+
+            <div class="w3-col s3">
+                <a href="slide.html" class="w3-button w3-block">
+                    <i class="fas fa-cut"></i> Gallery
+                </a>
+            </div>
+        </div>
+    </div>
     <div class="container">
 
         <div class="slide">
@@ -68,7 +90,6 @@
         <div class="button">
             <button type="button" title="prev_btn" class="prev"><i class="fa-solid fa-arrow-left"></i></button>
             <button type="button" title="nxt_btn" class="next"><i class="fa-solid fa-arrow-right"></i></button>
-            <a href="index.html"><button type="button" title="home" class="prev">Home</button></a>
         </div>
     </div>
 
