--- a/slide.html
+++ b/slide.html
@@ -85,6 +85,64 @@
                 </div>
             </div>
 
+            <div class="item" style="background-image: url(./images/happy_client\ bnb.jpg);">
+                <div class="content">
+                    <div class="name">Happy Client</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(./images/shapping.JPG);">
+                <div class="content">
+                    <div class="name">Taking Shape</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+                <div class="item" style="background-image: url(./images/cut.jpeg);">
+                    <div class="content">
+                        <div class="name">Haircut</div>
+                        <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                        <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                    </div>
+            </div>
+            <div class="item" style="background-image: url(./images/cut.JPG);">
+                <div class="content">
+                    <div class="name">Haircut</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+        </div>
+            <div class="item" style="background-image: url(./images/wiring2.jpg);">
+                <div class="content">
+                    <div class="name">Wiring</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(./images/jalia.jpg);">
+                <div class="content">
+                    <div class="name">First Client</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(./images/old\ staff.jpg);">
+                <div class="content">
+                    <div class="name">Friends</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(./images/pricelist_salon_bnb.jpg);">
+                <div class="content">
+                    <div class="name">Price List</div>
+                    <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
+                    <a href="index.html?#hour-section"><button type="button" title="book">Book Now </button> </a>
+                </div>
+            </div>
+
+
         </div>
 
         <div class="button">
