--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/w3.css">
         <!-- Custom Css -->
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css">
 
         <!-- Font Families -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
