--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <img src="./images/SALON_BNB_LOGO-01.png" alt="barber"
                             style="width: 100%; height: 100%;">
                     </div>
-                    <p><b>Isaac</b></p>
+                    <p><b>Ashraf</b></p>
                 </div>
             </div>
             <div class="w3-third w3-container w3-margin-bottom w3-hover-grayscale">
